src/snapshots/blog__snapshot@inside-rust__2019__11__19__infra-team-meeting.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2019/11/19/infra-team-meeting.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>2019-11-19 Infrastructure Team Meeting | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="2019-11-19 Infrastructure Team Meeting | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="2019-11-19 Infrastructure Team Meeting | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="2019-11-19 Infrastructure Team Meeting" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>2019-11-19 Infrastructure Team Meeting</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Nov. 19, 2019 &middot; Pietro Albini
     on behalf of <a href="https://www.rust-lang.org/governance/teams/operations#infra">the infrastructure team</a> 
    </div>

    <div class="post">
      <p>Meeting run by pietroalbini. Minutes written by pietroalbini.<br />
Attending: alexcrichton, kennytm, Mark-Simulacrum, pietroalbini, shepmaster<br />
<a href="https://discordapp.com/channels/442252698964721669/443148319431065610/646409370095190016">Start of the conversation</a></p>
<h2><a href="#migrating-cratesio-behind-cloudfront" aria-hidden="true" class="anchor" id="migrating-cratesio-behind-cloudfront"></a>Migrating crates.io behind CloudFront</h2>
<p>While static.crates.io (hosting the source code of all the published crates) is
behind CloudFront, that’s not true today for the crates.io web application.
This causes problems because crates.io is hosted on Heroku, which requires
pointing a CNAME to Heroku’s DNS. Unfortunately crates.io doesn’t use a
subdomain, which prevents us from using CNAMEs. All our DNS zones are on AWS
Route53, but AWS only supports CNAMEs on the apex pointing to other AWS
resources. Because of that, the crates.io DNS was managed on a different
service until today, causing maintenance issues on our end.</p>
<p>The solution we’re working torwards is to put CloudFront in front of crates.io,
and that will finally allow us to migrate the crates.io domain to AWS.
pietroalbini is finishing the last infra touches, and we expect to deploy the
changes in the coming days.</p>
<h2><a href="#dns-management-with-terraform" aria-hidden="true" class="anchor" id="dns-management-with-terraform"></a>DNS management with Terraform</h2>
<p>pietroalbini announced to the rest of the team that he started working on
migrating the DNS records of our domains to Terraform. He already migrated the
zones of <a href="https://github.com/rust-lang/simpleinfra/blob/master/terraform/services/dns/cratesio.com.tf">cratesio.com</a> and <a href="https://github.com/rust-lang/simpleinfra/blob/master/terraform/services/dns/crates.io.tf">crates.io</a>, and he plans to migrate the other ones
over the coming weeks. pietroalbini also wrote <a href="https://forge.rust-lang.org/infra/docs/dns.html">documentation</a> on this setup.</p>
<h2><a href="#another-github-actions-ci-configuration-prototype" aria-hidden="true" class="anchor" id="another-github-actions-ci-configuration-prototype"></a>Another GitHub Actions CI configuration prototype</h2>
<p>pietroalbini continued his investigation into another prototype for our new
GitHub Actions configuration. To reiterate, GitHub Actions doesn’t support
templates or includes, so the infrastructure team is looking into a way to
reduce duplication between our pipelines.</p>
<p>Since the two prototypes presented at last week’s meeting weren’t liked by all
the team, pietroalbini continued experimenting, and the prototype presented
this week was based around YAML anchors, a standard YAML feature to reuse parts
of data inside a single file. Unfortunately GitHub Actions explicitly disables
YAML anchors, so pietroalbini wrote a small tool that pre-generates the
expanded configuration file and commits it into the repo.</p>
<p>The team liked this approach much more, as it doesn’t introduce any new
configuration syntax while keeping the configuration files in a manageable
state. pietroalbini is going to polish the prototype and open a PR for it in
the coming days.</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
